# vision-roi-guard

./: .gitignore  README.md  hacs.json  pyproject.toml  requirements_dev.txt
.github/workflows/: ci.yml
custom_components/vision_roi_guard/: __init__.py  binary_sensor.py  button.py  camera_client.py  config_flow.py  const.py  coordinator.py  debug_store.py  diagnostics.py  entity.py  exceptions.py  image.py  manifest.json  models.py  number.py  roi.py  sensor.py  services.yaml  strings.json  switch.py  time.py
custom_components/vision_roi_guard/backends/: __init__.py  base.py  codex_cli.py  http_analyzer.py  mock.py
custom_components/vision_roi_guard/helpers/: __init__.py  redact.py  schema.py  validation.py
custom_components/vision_roi_guard/translations/: en.json
custom_components/vision_roi_guard/www/: roi-editor-card.js  roi-editor-panel.js
docs/: ARCHITECTURE.md  HTTP_ANALYZER_BACKEND.md  IMPLEMENTATION_PLAN.md  SECURITY_AND_PRIVACY.md
docs/examples/: automation_mower_gate.yaml
examples/analyzers/codex-cli/: README.md  systemd-user.service.example
examples/analyzers/mock-http/: README.md  server.py
tests/: conftest.py  test_camera_client.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_init.py  test_options_flow.py  test_roi.py  test_services.py
tests/backends/: test_codex_cli.py  test_http_analyzer.py  test_mock.py
